--- a/app/src/main/res/layout/child_view_holder.xml
+++ b/app/src/main/res/layout/child_view_holder.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:id="@+id/parent"
     android:background="@android:color/holo_red_light"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/child_text"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:layout_marginLeft="20dp" />
 </FrameLayout>
