--- a/app/src/main/res/layout/parent_view_holder.xml
+++ b/app/src/main/res/layout/parent_view_holder.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:id="@+id/parent"
     android:background="@android:color/holo_green_light"
     android:orientation="vertical">
 
     <TextView
+        android:layout_gravity="center_vertical"
         android:id="@+id/holder_text"
         android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
